C2E API authentication and authorization :zap:
